--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "@types/crypto-js": "^3.1.38",
+    "@types/lodash": "^4.14.92",
+    "@types/lowdb": "^1.0.0",
+    "crypto-js": "^3.1.9-1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
+    "lowdb": "^1.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.6",
-    "typescript": "2.4.2"
+    "@ionic/app-scripts": "3.1.7",
+    "typescript": "^2.6.2"
   },
   "description": "An Ionic project"
 }
